# DailyReporter

./: .gitignore  ChangeLog.md  DailyReporter.cabal  LANG.md  LICENSE  README.md  app.nix  cabal.project  default.nix  fourmolu.yaml  package.yaml  shell.nix  stack.yaml  theseus.nix
.github/workflows/: daily.yml  updatecache.yml
app/: Main.hs
configs/: MailConfig  WeatherConfig
data/parsers/: PDL.json  Qwantz.json  Smbc.json  Xkcd.json
data/templates/: Apod.html  Buttersafe.html  Ec.html  PDL.html  Qwantz.html  Smbc.html  Weather.html  Word.html  Xkcd.html
nix/: sources.json
parsers/: apod.json  butter.json  ec.json  pdl.json  qwantz.json  weather.json  xkcd.json
prelude/: Prelude.hs
src/: Apod.hs  Buttersafe.hs  Config.hs  Ec.hs  Email.hs  Fallible.hs  Lib.hs  Message.hs  PDL.hs  Parser.hs  Qwantz.hs  Smbc.hs  Tracing.hs  Utils.hs  Weather.hs  Word.hs  Xkcd.hs
src/Fallible/: Retryable.hs  Throwing.hs
src/File/: Class.hs  Filesystem.hs
src/Fresh/: DateCounter.hs
src/Logging/: Context.hs  Errors.hs  Info.hs
src/Matrix/: Class.hs  Debug.hs  MatrixT.hs
src/Network/: Class.hs  Network.hs
src/Parser/: HtmlParser.hs  JsonParser.hs
src/Sources/: Apod.hs  Buttersafe.hs  Ec.hs  Exocomics.hs  Lib.hs  PDL.hs  Qwantz.hs  Smbc.hs  Sources.hs  Weather.hs  Word.hs  Xkcd.hs
src/Sources/Lib/: Scraper.hs  Source.hs  SourceFactory.hs  SourceResult.hs
templates/: Apod.html  Buttersafe.html  Ec.html  PDL.html  Qwantz.html  Smbc.html  Weather.html  Word.html  Xkcd.html
test/: DateCounterSpec.hs  Mock.hs  NetworkSpec.hs  SourcesSourcesSpec.hs  SourcesSpec.hs  ThrowingSpec.hs
test/Sources/: Apod  Buttersafe  Ec  Ec.json  Exocomics  PDL  PDL.json  Qwantz  Smbc  Weather  Word  Xkcd  Xkcd.json  apod.json  butter.json  qwantz.json  smbc.json  weather.json  word.json  xkcd.json
test/Sources/https:/: buttersafe.com.html  existentialcomics.com.html  exocomics.com.html  poorlydrawnlines.com.html  www.qwantz.com.html  xkcd.com.html
test/Sources/https:/api.nasa.gov/planetary/: apod.html
test/Sources/https:/api.pirateweather.net/forecast/key/: 10,34.html
test/Sources/https:/feeds.feedburner.com/: PoorlyDrawnLines.html
test/Sources/https:/smbc-comics.com/: rss.php.html
test/Sources/https:/www.merriam-webster.com/: word-of-the-day.html
test/Sources/https:/www.merriam-webster.com/wotd/feed/: rss2.html
test/Sources/https:/www.qwantz.com/: rssfeed.php.html
